fancyeconomy: Refactor DistributedWorkload